# mpp-python-demo

./: README.md  pyproject.toml
docs/: MPP_SERVICES.md  TEST_REPORT.md
server-js/: README.md  package.json
server-js/src/: index.ts
src/mpp_demo/: __init__.py  __main__.py  client.py  onchain.py  protocol.py  server.py  session.py  session_http.py  session_onchain.py
src/mpp_demo/client/: __init__.py  charge.py  cli.py  session.py
src/mpp_demo/core/: __init__.py  config.py  escrow.py  protocol.py  voucher.py
src/mpp_demo/server/: __init__.py  app.py  verifier.py
src/mpp_demo/signer/: __init__.py  base.py  env.py  local.py  tempo_adapter.py
tests/: test_benchmark.py  test_server.py  test_server_onchain.py  test_session.py  test_session_onchain.py  test_signer.py
